--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   thikdb:
     path: ../
   get: ^4.6.6
-
+  path_provider: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
