--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: thikdb
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/namlhse02285/thikdb
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
