--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: thikdb
-description: A new Flutter package project.
+description: Thik Hive implementation for easy create simple config for app.
 version: 1.0.0
 homepage: https://github.com/namlhse02285/thikdb
 
