--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: thikdb
 description: Thik Hive implementation for easy create simple config for app.
-version: 1.2.1
+version: 1.2.2
 homepage: https://github.com/namlhse02285/thikdb
 
 environment:
@@ -17,7 +17,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  get: ^4.6.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
